...
/*eslint sort-keys: "error"*/
export const messages: { [key in MessageId]: string } = {
  'buddyList.title': 'Chats',

  'components.createdBySosBanner': 'Brought to you by SOS-Lapsikylä',

  'components.mentorCard.readMore': 'Show mentor',
  'components.mentorCard.yearsAbbrev': ' y/o',

  'components.mentorSkills.other': 'I can also help with:',
  'components.mentorSkills.subject': 'Subject:',

  'components.remoteData.loading': 'Loading...',
  'components.remoteData.loadingFailed': 'Loading failed',
  'components.remoteData.retry': 'Try again',

  'components.slider.SendAnswerButton': 'Send',

  'date.day.today': 'today',
  'date.day.yesterday': 'yesterday',

  'date.month.01': 'January',
  'date.month.02': 'February',
...
  'main.chat.delete.confirmation.button': 'Delete',
  'main.chat.deleteAll': 'Delete all',
  'main.chat.deleteAll.confirmation':
    'Are you sure you want to delete all banned chats? This action cannot be undone.',
  'main.chat.deleteAll.error': 'Deleting failed',
  'main.chat.navigation.archived': 'Archived',
  'main.chat.navigation.banned': 'Banned',
  'main.chat.report': 'Report',
  'main.chat.send.failure': 'Sending message failed',
  'main.chat.unban': 'Restore chat',
  'main.chat.unban.confirmation': 'Are you sure you want to restore this user?',
  'main.chat.unban.confirmation.button': 'Restore',

  'main.mentor.other': 'I can also support with:',
  'main.mentor.special.notAvailable': 'Not available',
  'main.mentor.special.you': 'You',
  'main.mentor.story': 'My story',
  'main.mentor.subject': 'Subject:',

  'main.mentorCardExpanded.button': 'Chat',
  'main.mentorList.title': 'Mentors',

  'main.mentorsTitleAndSearchButton': 'Search',
  'main.mentorsTitleAndSearchButtonFiltersActive': 'Filters',
  'main.searchMentor.resetButton': 'Reset',
  'main.searchMentor.searchField.placeholder': 'Type in keyword',
  'main.searchMentor.shouldHideInactiveMentors': 'Hide inactive mentors',
  'main.searchMentor.showButton': 'Show',
  'main.searchMentor.title': 'Search',

  'main.settings.account.displayName': 'Display name',

  'main.settings.account.email.change': 'Change email',
  'main.settings.account.email.fail': 'Changing email failed!',
  'main.settings.account.email.fieldTitle': 'Email',
  'main.settings.account.email.invalid': 'Invalid email address',
  'main.settings.account.email.missing': 'no email',
...

  'main.settings.account.password.button': 'Change password',
  'main.settings.account.password.current': 'Current password',
  'main.settings.account.password.failure':
    'Password change failed: check current password!',
  'main.settings.account.password.invalid.same':
    'Both new passwords should match',
  'main.settings.account.password.new': 'New Password',
  'main.settings.account.password.repeat': 'Repeat new password',
  'main.settings.account.password.requirements':
    'New password should be a minimum of eight characters in length, include one uppercase letter, one lowercase letter and a special character',
  'main.settings.account.password.success': 'Password change succeeded',
  'main.settings.account.password.title': 'Password',
...

  'main.settings.account.status.fail': 'Changing status message failed!',
  'main.settings.account.status.success': 'Changing status message succeeded!',
  'main.settings.account.status.title': 'Status message',

  'main.settings.account.title': 'Account settings',
  'main.settings.account.userName': 'Username',

  'main.settings.account.vacation.off': 'Off',
  'main.settings.account.vacation.on': 'On',
  'main.settings.account.vacation.title': 'Vacation mode',

  'main.settings.deleteAccount.cancel': 'Cancel',
...
    'The service is intended for people over 17 years of age. If you are under 17 years old, you can visit the Apuu chat for 7-15 year olds or the Sekasin chat for 12-29 year olds.',
  'onboarding.welcome.text4': 'If you are under 15, you can visit:',
  'onboarding.welcome.text5': 'If you are under 17, you can visit:',
  'onboarding.welcome.text6': 'We hope you will enjoy the service!',
  'onboarding.welcome.title': 'Hello!',

  'tabs.chats': 'Chats',
  'tabs.mentors': 'Mentors',
  'tabs.settings': 'Settings',
};

