...
    >
      <SafeAreaView style={styles.safeArea}>
        {!onPress ? null : (
          <RN.TouchableOpacity
            style={styles.chevronButton}
            onPress={onPress}
            testID={'chat.back.button'}
          >
            <RN.Image
              source={require('../../images/chevron-left.svg')}
              style={styles.chevronIcon}
            />
          </RN.TouchableOpacity>
...
          </RN.Pressable>
        )}
        <RN.TouchableHighlight
          style={styles.kebabIconHighlight}
          onPress={openDropdown}
          underlayColor={colors.faintBackground}
          testID={'main.chat.title.kebabicon'}
          hitSlop={{ top: 30, bottom: 30, left: 30, right: 30 }}
        >
          <RN.Image
            source={require('../../images/three-dot-menu-chat.svg')}
            style={styles.kebabIcon}
          />
...
