...
                onClick: openEmailForm,
              }}
            >
              {email ? (
                <RN.Text
                  style={styles.fieldValueText}
                  testID="main.settings.account.email"
                >
                  {email}
                </RN.Text>
              ) : (
                <Message
                  style={styles.fieldValueText}
...
