...
        {isSignup && (
          <InfoBox messageId="main.settings.account.password.requirements" />
        )}
        <ErrorMessage
          getMessageId={getErrorMessageId}
          data={remoteAction}
          testID={'components.loginCard.errorMessage'}
        />
      </RN.View>

      <RN.View style={styles.buttonContainer}>
        <Button
          messageId="onboarding.signUp.back"
...
