...
    <RN.SafeAreaView style={[styles.shadow]} onLayout={onLayout}>
      <RN.View style={styles.spacer} />
      <Message id="buddyList.title" style={styles.screenTitleText} />
      <RN.TouchableHighlight
        style={styles.kebabIconHighlight}
        underlayColor={colors.faintBackground}
        testID={'main.buddylist.kebabicon'}
        onPress={openDropdown}
      >
        <>
          <RN.Image
            source={require('../../images/three-dot-menu.svg')}
            style={styles.kebabIcon}
...
